fix android flickering for dark mode

--- a/tailwind.css
+++ b/tailwind.css
@@ -119,8 +119,8 @@
   display: none
 }
 
-.h-12 {
-  height: 3rem
+.h-14 {
+  height: 3.5rem
 }
 
 .h-40 {
@@ -137,18 +137,6 @@
 
 .h-28 {
   height: 7rem
-}
-
-.h-24 {
-  height: 6rem
-}
-
-.h-16 {
-  height: 4rem
-}
-
-.h-14 {
-  height: 3.5rem
 }
 
 .w-24 {
@@ -187,12 +175,24 @@
   align-items: center
 }
 
+.justify-start {
+  justify-content: flex-start
+}
+
 .justify-center {
   justify-content: center
 }
 
 .justify-between {
   justify-content: space-between
+}
+
+.justify-around {
+  justify-content: space-around
+}
+
+.justify-evenly {
+  justify-content: space-evenly
 }
 
 .rounded-md {
@@ -255,12 +255,12 @@
   padding: 0.75rem
 }
 
-.p-4 {
-  padding: 1rem
-}
-
 .p-6 {
   padding: 1.5rem
+}
+
+.p-4 {
+  padding: 1rem
 }
 
 .p-2 {
